# skill-radar

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  skills-lock.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: exception_handlers.py  exceptions.py  logging.py  router_loader.py  settings.py
backend/app/core/database/: dependencies.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/domains/assessments/: router.py
backend/app/domains/auth/: dependencies.py  router.py
backend/app/domains/candidates/: router.py
backend/app/domains/competencies/: router.py
backend/app/domains/health/: router.py
backend/app/domains/invitations/: router.py
backend/app/domains/questions/: router.py
backend/app/domains/selection_processes/: router.py
backend/app/domains/templates/: router.py
backend/app/domains/themes/: router.py
backend/app/domains/users/: router.py
backend/app/shared/: constants.py
backend/app/shared/middleware/: http_logger_middleware.py  security_headers_middleware.py
backend/app/shared/schemas/: default_response.py
backend/tests/: conftest.py
backend/tests/unit/api/: conftest.py  test_assessments_api.py  test_auth_api.py  test_candidates_api.py  test_competencies_api.py  test_exception_handlers.py  test_invitations_api.py  test_questions_api.py  test_router_loader.py  test_selection_processes_api.py  test_templates_api.py  test_themes_api.py  test_users_api.py
frontend/: .dockerignore  (+9 more)
(+221 files in other folders)
