[project]
name = "skill-radar-backend"
version = "0.1.0"
description = "Backend for Skill Radar App"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "alembic>=1.18.4,<2.0.0",
    "asyncpg>=0.31.0,<1.0.0",
    "fastapi>=0.136.1,<1.0.0",
    "fastapi-swagger-ui-theme>=0.1.0,<1.0.0",
    "orjson>=3.11.9,<4.0.0",
    "psycopg[binary]>=3.3.4,<4.0.0",
    "pwdlib[argon2]>=0.3.0,<1.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    "pyjwt>=2.12.1,<3.0.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "python-multipart>=0.0.27,<1.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "sqlalchemy>=2.0.49,<3.0.0",
    "structlog>=25.5.0,<26.0.0",
    "uvicorn[standard]>=0.46.0,<1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<1.0.0",
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.15.12,<1.0.0",
    "ty>=0.0.34,<1.0.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "SIM",
    "TCH",
]

ignore = ["E501", "TCH001", "TCH002"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.14"
